--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-
-
-# Playwright
+# Dependencias de Node (Backend y Playwright)
 node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-/playwright/.auth/
+package-lock.json
+
+# Reportes y resultados de Playwright
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
+
+# Archivos de entorno y secretos 
+.env
+
+# Archivos del sistema y logs
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Carpeta de compilación 
+dist/
