--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,19 +9,45 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: lts/*
+        cache: 'npm' # Agregamos cache para que las próximas corridas sean más rápidas
+
     - name: Install dependencies
       run: npm ci
+
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+
+    - name: Start Backend Server
+      # El '&' permite que el servidor corra en segundo plano mientras siguen los pasos
+      # Usamos 'npx wait-on' (si lo tienes) o un sleep para dar tiempo al server de arrancar
+      run: |
+        node backend/server.js & 
+        sleep 5 
+
     - name: Run Playwright tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+
+    - name: Upload HTML Report
+      # Este es el reporte  video del bug
+      uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: playwright-report
         path: playwright-report/
+        retention-days: 30
+
+    - name: Upload JUnit Results
+      # Este es el XML que mencionaste para integración con otras herramientas
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: junit-results
+        path: results.xml
         retention-days: 30
