--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,22 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ master ]
   pull_request:
-    branches: [ main, master ]
-    workflow_dispatch:
+    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      modulo:
+        description: 'Selecciona el módulo a probar (o "todos" para ejecución completa)'
+        required: true
+        default: 'todos'
+        type: choice
+        options:
+          - todos
+          - registro
+          - login
+          - simulador
+
 jobs:
   test:
     timeout-minutes: 60
@@ -17,7 +29,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: lts/*
-        cache: 'npm' # Agregamos cache para que las próximas corridas sean más rápidas
+        cache: 'npm'
 
     - name: Install dependencies
       run: npm ci
@@ -26,17 +38,19 @@ jobs:
       run: npx playwright install --with-deps
 
     - name: Start Backend Server
-      # El '&' permite que el servidor corra en segundo plano mientras siguen los pasos
-      # Usamos 'npx wait-on' (si lo tienes) o un sleep para dar tiempo al server de arrancar
       run: |
         node backend/server.js & 
         sleep 5 
 
     - name: Run Playwright tests
-      run: npx playwright test
+      run: |
+        if [ "${{ github.event.inputs.modulo }}" == "todos" ] || [ "${{ github.event_name }}" == "push" ]; then
+          npx playwright test
+        else
+          npx playwright test tests/${{ github.event.inputs.modulo }}.spec.ts
+        fi
 
     - name: Upload HTML Report
-      # Este es el reporte  video del bug
       uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -45,7 +59,6 @@ jobs:
         retention-days: 30
 
     - name: Upload JUnit Results
-      # Este es el XML que mencionaste para integración con otras herramientas
       uses: actions/upload-artifact@v4
       if: always()
       with:
